# rr-splash

./: CMakeLists.txt
data/: logo.xcf
src/: main.c
src/fbg/fbdev/: fbg_fbdev.c
